show login dialog

--- a/src/mzkit/mzkit/forms/frmLogin.resx
+++ b/src/mzkit/mzkit/forms/frmLogin.resx
@@ -141,6 +141,27 @@
   <metadata name="Label1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Button2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Button1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="LinkLabel1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TextBox2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TextBox1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="PictureBox1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -150,4 +171,81 @@
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAACMuAAAjLgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHUzEQB1MxEEdTMRAHUzEQd1MxEEdTMRBnUz
+        ERR1MxEAdTMRH3UzEQV1MxEHdTMRCXUzEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB1MxEAdTMRAHUz
+        EQB1MxEBdTMRA3UzEQB1MxEFdTMRAXUzEQB1MxEAdTMRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdTMRAHUzEQJ1MxEBdTMRAnUzEQV1MxEEdTMROnUz
+        EQh1MxFTdTMRNnUzETt1MxGIdTMRHXUzEYh1MxEsdTMRTHUzEU11MxEKdTMRNHUzEQJ1MxEIdTMRAnUz
+        EQF1MxECdTMRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB1MxEAdTMRAXUzEQF1MxEBdTMRA3Uz
+        EQN1MxEkdTMRBnUzETl1MxEldTMRL3UzEXF1MxEUdTMRcHUzESN1MxE1dTMRNnUzEQZ1MxEidTMRAnUz
+        EQV1MxEBdTMRAXUzEQF1MxEAAAAAAAAAAAAAAAAAAAAAAAAAAAB1MxEAdTMRAHUzEQB1MxEFdTMRAnUz
+        ERF1MxEndTMRF3UzEVt1MxEjdTMRaHUzEVR1MxFYdTMRknUzEUd1MxGXdTMRT3UzEVl1MxFidTMRLHUz
+        EVt1MxERdTMRJ3UzEQ51MxEDdTMRBnUzEQAAAAAAAAAAAAAAAAAAAAAAAAAAAHUzEQB1MxEBdTMRAHUz
+        ERd1MxEIdTMRNHUzEXN1MxE4dTMR2HUzEVt1MxHKdTMRsXUzEad1MxHydTMRmXUzEfp1MxGfdTMRuHUz
+        Ecd1MxFrdTMR1XUzESt1MxF0dTMRK3UzEQ91MxEZdTMRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHUz
+        EQB1MxEAdTMRCnUzEQR1MxEbdTMRLnUzESV1MxGLdTMRPnUzEZZ1MxF9dTMRh3UzEd11MxFudTMR4XUz
+        EXt1MxGJdTMRkHUzEUR1MxGLdTMRInUzETJ1MxEWdTMRBnUzEQp1MxEAAAAAAAAAAAAAAAAAAAAAAHUz
+        EQB1MxECdTMREXUzEQV1MxGJdTMRSXUzEYh1MxHTdTMRmnUzEf11MxHndTMR+HUzEfZ1MxH1dTMR/HUz
+        Ee11MxH+dTMR9HUzEfd1MxH2dTMR5nUzEft1MxGmdTMR43UzEXx1MxFUdTMRd3UzEQB1MxELdTMRAAAA
+        AAAAAAAAdTMRAHUzEQB1MxEDdTMRAXUzETd1MxEbdTMRWnUzEZJ1MxFsdTMR+HUzEf91MxH/dTMR/3Uz
+        Efp1MxGRdTMRR3UzEah1MxH/dTMR/3UzEf91MxH/dTMR9HUzEWh1MxGZdTMRSnUzESF1MxExdTMRAHUz
+        EQJ1MxEAAAAAAAAAAAB1MxEAdTMRBHUzESF1MxENdTMReHUzEVh1MxGTdTMRzXUzEbV1MxH8dTMR/3Uz
+        Ef91MxH/dTMRz3UzERV1MxEAdTMRL3UzEep1MxH/dTMR/3UzEf91MxH6dTMRsXUzEc91MxGGdTMRWXUz
+        EXB1MxELdTMRInUzEQN1MxEAdTMRAHUzEQB1MxEGdTMROXUzERN1MxGwdTMRfnUzEbN1MxH/dTMR/3Uz
+        Ef91MxH/dTMR/3UzEf91MxHfdTMRMHUzEQB1MxEVdTMRzXUzEf91MxH/dTMR/3UzEf91MxH/dTMR/3Uz
+        Eat1MxGGdTMRpXUzERJ1MxE5dTMRBXUzEQB1MxEAdTMRAHUzEQJ1MxEQdTMRCHUzEV91MxFDdTMRmnUz
+        Ef91MxH/dTMR/3UzEf91MxH/dTMR/3UzEf91MxHYdTMRmHUzEVd1MxFPdTMR33UzEf91MxH/dTMR/3Uz
+        Ef91MxH/dTMRh3UzEUl1MxFXdTMRB3UzERF1MxECdTMRAXUzEQB1MxEFdTMRFHUzEXx1MxE0dTMR4XUz
+        EdJ1MxHpdTMR/3UzEf91MxH/dTMR/3UzEf91MxH/dTMR/XUzEZ51MxFWdTMRn3UzEXV1MxE3dTMRaXUz
+        Eal1MxH6dTMR/3UzEf91MxHhdTMR13UzEdd1MxExdTMRhXUzERJ1MxEKdTMRBXUzEQB1MxEDdTMRFnUz
+        EQ11MxFudTMRVHUzEa91MxH/dTMR/3UzEf91MxH/dTMR/3UzEf91MxHhdTMRJHUzEQB1MxErdTMRyHUz
+        ESZ1MxEAdTMREHUzEb11MxH/dTMR/3UzEaR1MxFYdTMRaHUzEQx1MxEXdTMRA3UzEQB1MxEAdTMRA3Uz
+        ER51MxGAdTMRO3UzEct1MxHCdTMR4XUzEf91MxH/dTMR/3UzEf91MxH/dTMR/3UzEbZ1MxEIdTMRAHUz
+        ET91MxHZdTMRMnUzEQB1MxEMdTMRtXUzEf91MxH/dTMR3HUzEcZ1MxHAdTMROnUzEYd1MxEZdTMRBnUz
+        EQN1MxEBdTMRGHUzEWx1MxExdTMRvXUzEa11MxHYdTMR/3UzEf91MxH/dTMR/3UzEf91MxHedTMRS3Uz
+        EVR1MxGXdTMR2nUzEZV1MxEndTMRXnUzEZ11MxH4dTMR/3UzEf91MxHSdTMRtHUzEbN1MxEwdTMRc3Uz
+        ERR1MxEEdTMRAnUzEQF1MxEMdTMRPXUzERx1MxGYdTMRgnUzEcZ1MxH/dTMR/3UzEft1MxG9dTMRf3Uz
+        ETt1MxF0dTMR63UzEdB1MxGHdTMROXUzEcR1MxH/dTMR/3UzEf91MxH/dTMR/3UzEbp1MxGHdTMRknUz
+        ERt1MxE+dTMRCnUzEQJ1MxEBdTMRBHUzESZ1MxGldTMRSnUzEeh1MxHjdTMR8XUzEf91MxH/dTMRwXUz
+        ERV1MxEAdTMRM3UzEeJ1MxFmdTMRDXUzEQl1MxGldTMR/3UzEf91MxH/dTMR/3UzEf91MxH/dTMR7nUz
+        Eeh1MxHadTMRSXUzEbB1MxEhdTMRCHUzEQR1MxEAdTMRA3UzERZ1MxELdTMRd3UzEVd1MxGxdTMR/3Uz
+        Ef91MxGndTMRBHUzEQB1MxE+dTMR23UzESZ1MxEAdTMRHHUzEdx1MxH/dTMR/3UzEf91MxH/dTMR/3Uz
+        Ef91MxGgdTMRXnUzEXB1MxEJdTMRF3UzEQJ1MxEAAAAAAHUzEQV1MxETdTMRcXUzES91MxHYdTMRyHUz
+        EeR1MxH/dTMR/3UzEe11MxF8dTMRP3UzESJ1MxGpdTMRhHUzESN1MxFwdTMR9nUzEf91MxH/dTMR/3Uz
+        Ef91MxH/dTMR/3UzEdt1MxHLdTMRznUzES11MxF4dTMREHUzEQl1MxEEdTMRAXUzEQd1MxEodTMRE3Uz
+        EYJ1MxFrdTMRtHUzEf91MxH/dTMR/3UzEf51MxH2dTMRrHUzETl1MxGVdTMRvnUzEex1MxH/dTMR/3Uz
+        Ef91MxH/dTMR/3UzEf91MxH/dTMRqHUzEW11MxF6dTMREXUzESx1MxEGdTMRAnUzEQF1MxECdTMRA3Uz
+        ESB1MxENdTMRgnUzEVp1MxGldTMR/3UzEf91MxH/dTMR/3UzEf91MxH/dTMRlXUzEQd1MxEXdTMRbXUz
+        Efd1MxH/dTMR/3UzEf91MxH/dTMR/3UzEf91MxGYdTMRYHUzEXt1MxELdTMRInUzEQN1MxEAdTMRAHUz
+        EQN1MxEHdTMRP3UzERV1MxGqdTMRe3UzEbB1MxHsdTMR2XUzEf91MxH/dTMR/3UzEf91MxHRdTMRFHUz
+        EQB1MxEidTMR43UzEf91MxH/dTMR/3UzEf11MxHZdTMR8HUzEaV1MxGAdTMRn3UzERR1MxFAdTMRBXUz
+        EQB1MxEAdTMRAHUzEQB1MxEBdTMRAHUzER91MxEOdTMRT3UzEYZ1MxFkdTMR+HUzEf91MxH/dTMR/3Uz
+        EfV1MxFjdTMRFnUzEXh1MxH5dTMR/3UzEf91MxH/dTMR83UzEWB1MxGRdTMRRHUzERF1MxEadTMRAHUz
+        EQB1MxEAAAAAAAAAAAB1MxEAdTMRBHUzERx1MxEGdTMRjnUzEUx1MxGLdTMR3nUzEaZ1MxH/dTMR+HUz
+        Ef11MxH9dTMR/nUzEfJ1MxHadTMR93UzEf51MxH+dTMR/HUzEfZ1MxH+dTMRrnUzEet1MxGAdTMRU3Uz
+        EXh1MxECdTMRFHUzEQEAAAAAAAAAAHUzEQB1MxEAdTMRA3UzEQF1MxEddTMRD3UzETJ1MxFTdTMRRHUz
+        Ea51MxFldTMRs3UzEaB1MxGidTMR6XUzEZV1MxHrdTMRnXUzEax1MxGqdTMRZ3UzEal1MxE8dTMRWXUz
+        ESt1MxEQdTMRGXUzEQB1MxECdTMRAAAAAAAAAAAAAAAAAHUzEQB1MxECdTMRAHUzERZ1MxEIdTMRJ3Uz
+        EVh1MxEtdTMRtHUzEUp1MxG2dTMRnHUzEZh1MxHsdTMRiXUzEfF1MxGMdTMRpHUzEa51MxFVdTMRsnUz
+        ESN1MxFbdTMRIHUzEQ91MxEZdTMRAAAAAAAAAAAAAAAAAAAAAAAAAAAAdTMRAHUzEQF1MxEAdTMREXUz
+        EQZ1MxEhdTMRR3UzESZ1MxGbdTMRPnUzEZh1MxF/dTMRgHUzEcl1MxFxdTMRzHUzEXh1MxGHdTMRk3Uz
+        EUh1MxGYdTMRHnUzEUh1MxEbdTMRDHUzERN1MxEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHUz
+        EQB1MxEAdTMRAHUzEQB1MxEBdTMRAnUzERd1MxEDdTMRKXUzERp1MxEidTMRUXUzEQ91MxFSdTMRGXUz
+        ESV1MxEldTMRA3UzERR1MxEBdTMRAXUzEQB1MxEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAdTMRAHUzEQJ1MxEBdTMRAnUzEQd1MxEFdTMRSHUzEQt1MxFkdTMRQnUzEUl1MxGpdTMRJHUz
+        Ead1MxE3dTMRXXUzEV91MxEMdTMRQnUzEQN1MxEMdTMRA3UzEQF1MxECdTMRAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdTMRAHUzEQB1MxEBdTMRAHUzEQV1MxECdTMRB3Uz
+        ERF1MxEBdTMREXUzEQV1MxEEdTMRBHUzEQB1MxEAdTMRAHUzEQB1MxEAdTMRAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdTMRAHUzEQF1MxEAdTMRCXUz
+        EQZ1MxEEdTMRD3UzEQB1MxEbdTMRBHUzEQd1MxEJdTMRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/yAP///gD//wAAAf8AAAH5AAAB+QAAAf8AAAH4AAAAOAAAATgAEAAoAB
+        AAIAAAAAAAAAAIABEAAAARAAAAAAAAAAAAAAEAAAgBEAAwAAAAAAAAAAAAAAAAABAACAAAATgAAAA4AA
+        ABOQAAAfkAAAH/QAAH/wAAAf/wAIf/8gD/8=
+</value>
+  </data>
 </root>
