--- a/src/mzkit/mzkit/pages/dockWindow/explorer/frmSRMIonsExplorer.resx
+++ b/src/mzkit/mzkit/pages/dockWindow/explorer/frmSRMIonsExplorer.resx
@@ -127,46 +127,58 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAW
-        CQAAAk1TRnQBSQFMAgEBAgEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xQABvMG8gH0MwAF8wEH
-        Ae0B8AHtAfIB8AHyAfQhAA7/BAAL8wHyAfQhAAH/AekB/wHpAVIBIwExAf8BjQGMAdwBMQE3AdwEAAH0
-        AfMB9wPzAe0BBwHzAfcC8wH0IQAB/wNGAbwBSwE4Af8BCQG7AdsBDgJGAgAB9AHwBvQB7QXzAfQhAAH/
-        AUYBMQFSAUYBUwE4Af8BegH3AdUBDwL7AgAB9AHwBvQB7QPzAe0B8wH0IQAB/wFTAekBRgEIA/8E1QEe
-        AdUCAAHyAfAG8gHtBfMB9CEADv8CAAH/AfAG/wHtA/QC8wH0IQAB/wGLAa4CtAK7Af8BmQF4AXIBSQLD
-        AgAB/wHxBv8B7QHzBfQhAAH/AkkBbAG0AQkB9AH/AcMBeAFyAZkBBwGZAgAB8gG8BvIB7ALtBPQhAAH/
-        AXIFGQH/AiUBcgG1AbQBzwIAAe8B9wa1Ae0B8QHtAbwC/wH0IQAB/wHcARkE3AH/AisCGQHzARkCAAH/
-        AfQB8gHxAfAB8QHwAfEB8AT/AfMB/yEAAf8G1QH/BtwEAAP/Ae0C/wG8Av8BkgH0AfM0AAn/AfcB/zUA
-        CP8B8wH/YwABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAv8B4AUAAv8B4AUA
-        AYABAQHgBQABgAEBAeAFAAGAAQEBgAUAAYABAQGABQABgAEBAYAFAAGAAQEBgAUAAYABAQGABQABgAEB
-        AYAFAAGAAQEBgAUAAYABAQGABQABgAEBAeABAQQAAv8B4AEDBAAC/wHgAQcEAAT/BAAL
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC+
+        CwAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABGAEAARgBAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        AwABGAMAAQEBAAEYBgABGyQAA+8JAAP0BgAG+gYAA/QGAAP0A+4SAAPzA+wD6wbqCekD6APnCeYM5QPk
+        A+oD9JMAA/QM2gOkCdoDtwbaBskG2gO5A9kD2gPJA8ED7A8AA/MD7AbrCeoG6QnnCeYJ5QPrA/STAAbu
+        AwAB9QHsAfUB/wGuAfsB/gGuAfsB/AGwAfsB+gGyAfsB+AG0AfsB9gG2AfsB9AG4AfwB8gG7AfwB8AG9
+        AfwB7gG/AfwB6wHBAfwB6QHDAf0B5wHFAf0B5QHIAf0B6QHdAfQD5AP/EgAD8wntBuwD6wHGAbsBvQHI
+        AbwBvgGhAYkBjAHIAbwBvgHWAtAB0QHJAcoBzwHHAcgD5wGzAaIBpAHhAuAD5gPsA/STAAbuAwAB9QHs
+        AfMB/QGrAe4B/AGwAfsB+gGyAfsB+AG0AfsB9gG2AfsB9AG5AfsB8gG7AfwB8AG9AfwB7QG/AfwB6wHB
+        AfwB0AGGAeUB5wHGAf0B5QHIAf0B4wHKAf0B6AHeAfQYAAPzBu4G7QbsAdMBzAHNAboBqgGsAdgB0AHR
+        AcYBugG7A+oB2QHUAdUB2QLUA+kB0AHIAckB1wHSAdMD5gPsA/STAAbuAwAB9QHsAfMB/AGsAe4B+QGq
+        AeEB9wGsAeIB9QGvAeMB9AG4AfsB8gG7AfwB8AG9AfwB7gG/AfwB6wHBAfwBwwFzAd4B2wGFAaYBtQFL
+        Ac4B0wGgAe0B4QHMAf4B5wHfAfUYAAP0A+8M7gbtBuwJ6wnqA+kD6APsA/STAAOzA+kDAAH1Ae0B9QH6
+        AbIB+wH4AbQB+wH2AbYB+wH0AbgB/AHyAbAB2QHwAbIB2gHuAbsB8QHrAcEB/AHkAbkB+QGnAUMByQH8
+        AcYBogHiAZcBqQGiARsBtQHfAcwB/gHmAeAB9Q8ACf8D8wPwA+8BqAGSAZUB2wHVAdYG7gbtAa4BmgGd
+        Aa4BmgGdAckBvQG/AboBqgGsA+sBtAGjAaUG6gPpA+4D9JMABu4DAAHwAe0B9AG2AYcB2wHWAZcB7AH0
+        AbkB+wHyAbsB/AHwAb0B/AHuAb0B9QHsAbsB6wHpAcMB/QG8AXcB1AHhAaIBqwH8AcsBqQH8AcwBqwH8
+        Ac4BrQG8AU8BtAG+AWoBygH5AfcB+gwABsUBvQK7ArwBvQKpAaoCqQGqAZcBkQGSAZcCkgypAZACiQGm
+        AZcBmAG+Aa8BsQHKAb8BwAHbAdYB1wHHAbwBvQHcAtcG6gPuA/STAAbuBgAB7wHtAfQBbQE5AbsBsAF9
+        AdwB9AHNAf0B8gHPAf0B8QHRAf0B7wHKAegB3wG7AfABpAFVAbIB/AHOAa4B/AHPAa8B/AHQAbEB/AHR
+        AbMB/AHSAbQB4AGxAcsB+QH3AfoMAAbzAdwB2AHVDPMB4wHgAd4M8wHVAdABzQHRAcwBygG6AaoBrAHe
+        AtkB3QLYA+0B4QHdAd4D7APrA+8D9JMABu4MAAGwAZsB1gG/AZ4B5AH0Ad4B/QH0Ad8B/gHyAeEB/gGD
+        AS4BoQH8AdEBsgH8AdIBtAH8AdMBtgH8AdQBtwH8AdUBuQH9AdYBuwH0AeQB2A8ABvMB3AHYAdUM8wHj
+        AeAB3gzzAdYB0QHOAdMBzgHLCe4D7QHGAboBuwHTAcsBzAPsA/AD9JMAA8oD6w8AAdQBygHlAX8BVQHF
+        Ac8BtwHsAZEBYAHKAe4BvgGeAfoBvwGVAf0B3AHFAf0B3AHFAf0B2QG/Af0B2QHAAf0B2gHBAfQB5QHa
+        DwABzgHNAcwC0AHNAdwB2AHVAtABzQLQAc4B0AHOAcwC0AHNAdgB1QHSAtABzQHQAc8BzQHOAc0BywLQ
+        Ac0BvgG5AbQB0wHNAcsBuwGrAa0B3gLaAd4C2QPuAeMB3wHgBu0D8AP0kwAG7hIAAeMB3QHtAaEBhgHS
+        AcoBuwHgAwAB9gGoAXAB/QHqAdsB/gHsAd8B/gHmAdYB/gHkAdMB/QHeAccB9AHmAd4PAALtAewD7QHd
+        AdkB1gjtAewD7QHiAd8B3QftAuwD7QHTAc4BywHWAdEBzgbwBu8J7gPxA/STAAbuHgAB9AHpAeEB+wHS
+        AbYB/gHyAesB/gHwAecB/gHuAeQB/gHsAeEB9AHoAeAPAAL8Af0D/AHdAdkB1gz8AecB5AHiCPwB/QP8
+        Ad0B2AHVAdcB0gHPBvIG8QPvBu4D8QP0kwAD3gPsHgAB9wHyAe8B9QHFAaIB/gH4AfMB/gH2AfAB/gH0
+        Ae0B/gHyAeoB9QHvAesPAAP+Af0C/gHfAdsB2QH9Av4B/QX+Af0C/gHpAeYB5QH9Av4B/QX+Af0C/gHe
+        AdkB1wHYAdMB0AHyAvED8wbyA/EG8APyA/STAAPeA+whAAHwAccBqQH+AewB3gH/AfoB9gH/AfkB9QH+
+        AfcB8gH1AfEB7w8AAvQB8wL0AfMB3AHZAdYC9AHzAvQB8wL0AfMC9AHzAeQB4QHfAvQB8wL0AfMC9AHz
+        AvQB8wHYAdIBzwGyAaIBoQHzAvIB4QHcAd0B4QLcA/MB1wHPAdAB4AHaAdsD8gPzA/STAAbuJAAB9AGb
+        AVsB+AG8AZEB/wH7AfcB/wH7AfcB9QHyAfEPAAHkAeEB3wHkAeEB3wHVAdABzAHkAeEB3wHkAeEB3wHk
+        AeEB3wHkAeEB3wHaAdUB0gHkAeEB3wHkAeEB3wHkAeEB3wHkAeEB3wHKAcIBvgHWAdABzQGhAYkBjAHZ
+        AdEB0gHZAdEB0gP1Ab0BrQGvCfUD9JMABu4nAAHzAeYB3gHwAc0BswH4AcQBngH1AeAB0gL6AfkMAAHV
+        AcwBxgHVAcwBxgHIAb0BtgHVAcwBxQHVAcwBxQHVAcwBxQHVAcsBxQHMAcEBugHVAcsBxQHVAcsBxQHV
+        AcsBxQHVAcsBxQHDAbYBrwHZAdMB0AHvA+0B6gHrAe0B6gHrAekB5QHmBvgD9wP2A/STAAPJA+stAAP1
+        AfQB7AHmAvoB+QwAAa0BgwFoAa8BhQFqAa4BgQFmAbYBigFuAbkBjQFyAb0BkQF1AcEBlAF3AcEBkwF2
+        AckBmwF8AcsBngF/Ac0BnwGBAc8BoQGCAcQBnAGBAd4B1QHQAfAC7gHbAdMB1AHbAdMB1AHsAegB6Qb6
+        A/UD8gP0kwAG7kIAAfgB9gH1AfQB8gHwAe8B7AHpAeoB5AHhAeYB3wHbAeIB2gHVAeAB2AHSAd8B1gHR
+        AeAB2AHTAeAB2AHSAcsBwAG9AeEB2AHWAdcBzwHNAe8B7AHrA/kD+gn7A/YD7gPsA/WTAAbuSwAD9Qn3
+        Ae8B7AHtAdsB0wHUA/gB8AHtAe4D+QH1AvQB4QHbAdwD+gb7A8YD6wPjA9kD6pYABu5LAAP1A/kD+AP5
+        AcwBvgHAAb0BrAGtA/oBzAG/AcED+wHjAd0B3gG7AakBqwG/Aa8BsQP8A/sDnAP5Ae0B7gHtA/cD+JYA
+        A+4DwQP/SAAD9QP6BvkJ+gn7CfwD9wOgA+0D/AP/mQAD9QPoA/9IAAP1DPoG+wn8A/0D/AP3A+4DtwP4
+        A/ftAAP1A/0D/Az9DP4D+gP0A9cD/wP4/wC9AAFCAU0BPgcAAT4DAAEoAwABYAMAARgDAAEBAQABAQUA
+        ASABARYAA/8BAAH9AdkBswHwCAABgAEAAQEB8AgAAZABAAEDAfAIAAGQAQABDwHwCAABkAEAAQ8B8AgA
+        AZABAAEPAYAIAAGQAQABBwGACAABmAEAAQcBgAgAAZ4BAAEPAYAIAAGfAQABDwGACAABnwGIAQ8BgAgA
+        AZ8B+AEPAYAIAAGfAfgBDwGACAABnwH8AQ8BgAgAAZ8B/gEPAYAIAAGfAf8BBwGACAABnwH/AccBgAgA
+        AZ8C/wGACAABnwL/AfABAAEBBgABnwL/AfABAAEBBgABjwL/AfABAAEDBgABjwL/AfABAAEHBgAD/wHw
+        AQABDwYABv8GAAs=
 </value>
   </data>
   <metadata name="ToolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
