--- a/src/mzkit/mzkit/My Project/Resources.resx
+++ b/src/mzkit/mzkit/My Project/Resources.resx
@@ -127,6 +127,9 @@
   <data name="header_foreground_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\header-foreground-image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Res\IE.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="LICENSE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LICENSE.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
