--- a/src/mzkit/mzkit/My Project/Resources.resx
+++ b/src/mzkit/mzkit/My Project/Resources.resx
@@ -130,6 +130,9 @@
   <data name="IE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Res\IE.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="img_561134" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img_561134.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="LICENSE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LICENSE.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
@@ -165,6 +168,9 @@
   </data>
   <data name="vs" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\vs.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_1200px_Checked_svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1200px-Checked.svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_42082" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\42082.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
