--- a/src/mzkit/mzkit/My Project/Resources.resx
+++ b/src/mzkit/mzkit/My Project/Resources.resx
@@ -121,6 +121,9 @@
   <data name="chemistry" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\chemistry.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DBFile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DBFile.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="header_background_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\header-background-image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
