--- a/src/mzkit/mzkit/My Project/Resources.resx
+++ b/src/mzkit/mzkit/My Project/Resources.resx
@@ -124,11 +124,20 @@
   <data name="DBFile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DBFile.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Flask" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Flask.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Flask_no_bubbles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Flask_no_bubbles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="header_background_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\header-background-image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="header_foreground_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\header-foreground-image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Home_Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Home_Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="IE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Res\IE.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
