--- a/src/mzkit/mzkit/My Project/Resources.resx
+++ b/src/mzkit/mzkit/My Project/Resources.resx
@@ -139,6 +139,9 @@
   <data name="Home_Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Home_Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Home_Logo_Link" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Home_Logo_Link.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Res\IE.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
