--- a/src/mzkit/mzkit/My Project/Resources.resx
+++ b/src/mzkit/mzkit/My Project/Resources.resx
@@ -154,6 +154,9 @@
   <data name="license1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\license.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logging" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logging.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logo_2x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo@2x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
